Content text shift fixed

--- a/src/components/related/LandingPage/GreetingsView/Content/styles.module.scss
+++ b/src/components/related/LandingPage/GreetingsView/Content/styles.module.scss
@@ -30,7 +30,6 @@
 .Content__ActionGroup {
   width: $greetings-view-content-action-group-width;
   font-family: OpenSans-SemiBold;
-  font-weight: 600;
   font-size: 1.9em;
   line-height: 40px;
   text-align: center;
